# docker-autoheal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo-build.yml  cargo-check.yml  docker-publish.yml  get-version.yml  git-package.yml  git-release.yml  git-tag.yml  github-package.yml  github-release.yml  github-tag.yml
docker/: docker-autoheal.dockerfile
docker/alpine/stable/: docker-autoheal.dockerfile
src/: environment.rs  logging.rs  looper.rs  main.rs
src/action/: connect.rs
src/check/: inspect.rs  list.rs
src/execute/: action.rs  connect.rs  looper.rs  postaction.rs
src/inquire/: environment.rs  inspect.rs  list.rs  options.rs
src/report/: logging.rs  record.rs  webhook.rs
