[package]
name = "docker-autoheal"
version = "0.6.0"
authors = ["Travis M Knight"]
license = "MIT"
description = "A cross-platform tool to monitor and remediate unhealthy Docker containers"
readme = "README.md"
homepage = "https://github.com/tmknight/docker-autoheal"
edition = "2021"
rust-version = "1.74.1"

[dependencies]
bollard = "0.*"
chrono = "0.4.*"
futures = "0.3.*"
getopts = "0.2.*"
rustls = "0.22.*"
reqwest = "0.11.*"
tokio = { version = "1.*", features = ["full"] }

[build-dependencies]
h2 = "0.3.24"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.*", features = ["vendored"] }

[features]
ssl = ["bollard/ssl"]

[[bin]]
name = "docker-autoheal"
bench = true
test = true
