[package]
name = "docker-autoheal"
version = "0.13.0"
authors = ["Travis M Knight"]
license = "GPL-3.0"
description = "A cross-platform tool to monitor and remediate unhealthy Docker containers"
readme = "README.md"
homepage = "https://github.com/tmknight/docker-autoheal"
edition = "2021"
rust-version = "1.74"

[dependencies]
bollard = { version = "0.*", features = ["ssl"] }
chrono = "0.4.*"
futures = "0.3.*"
getopts = "0.2.*"
libc = "0.2.*"
reqwest = "0.11.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = { version = "1.*", features = ["full"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.*", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.*", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.*", features = ["vendored"] }

[[bin]]
name = "docker-autoheal"
bench = true
test = true
